Bing working with files on device